adding social comment and like/share

--- a/_posts/2016-09-26-origens.markdown
+++ b/_posts/2016-09-26-origens.markdown
@@ -46,3 +46,41 @@ Uma das características de um Full Stack é ser generalista, e apesar de haver 
 E você? Tem algo interessante para contar sobre o que originou a sua trilha até a área de TI? Estou curioso para saber!
 
 Mais uma vez obrigado e até a próxima!
+
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '599629900208460',
+      xfbml      : true,
+      version    : 'v2.7'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+
+
+
+<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.7&appId=599629900208460";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<div class="fb-comments" data-href="https://thefullstackroad.com" data-numposts="5"></div>
